change body background

--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,8 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
+}
+
+body {
   background: #FFF4E0;
 }
